$Id$                       -*-text-*-


**** 1.20 [unreleased]

	Revise documentation examples to use AAAA instead of A records.

	TSIG MAC representation changed to Base64 (align with BIND).

Fix rt.cpan.org #127307

	Provide a more informative exception report if application code
	has no "use Net::DNS::SEC" declaration but nevertheless attempts
	to invoke the DNSSEC sign or verify features.


**** 1.19 Nov 14, 2018

	Show structure of EDNS options using Perl-like syntax.

Fix rt.cpan.org #127557

	Net::DNS::Resolver::Base should use 3 args open

Fix rt.cpan.org #127182

	Incorrect logic can cause DNS search to emit fruitless queries.


**** 1.18 Sep 21, 2018

	Documentation revised to remove ambigous use of "answer" which
	has been used to refer to both the answer section of a packet
	and the entire reply packet received from a nameserver.

Fix rt.cpan.org #127018

	Net::DNS::ZoneFile->parse() fails if include directory specified.

Fix rt.cpan.org #127012

	DNS resolution broken when options ndots used in /etc/resolv.conf


**** 1.17 Jul 25, 2018

Fix rt.cpan.org #125890

	AXFR: 1 record per packet responses.

Fix rt.cpan.org #125889

	New NSEC3 for empty non-terminal leaves type bitmap undefined.

Fix rt.cpan.org #125882

	RDATA name compression pointer calculated incorrectly.


**** 1.16 Jul 15, 2018

Feature
	New NSEC3 encloser(), nextcloser() and wildcard() instance
	methods return closest encloser, "next closer" and putative
	wildcard names respectively.

Feature
	Add new NSEC covers() instance method.

Feature
	New NSEC typemap() instance method interrogates type list.

	IO::Socket::INET6 removed from recommended module metadata.
	IPv6 requires IO::Socket::IP which is now a core package.

	No requirement to escape @ in unquoted contiguous string.


**** 1.15 Feb 9, 2018

	GOST R 34.11-94 hash algorithm: end of life 1st Jan 2018
	per sunset clause in successor standard GOST R 34.11-2012.
	Digest::GOST removed from the recommended module metadata,