@@ -29,10 +29,10 @@ use constant DEBUG => 0;
 
 use constant UTIL => defined eval 'use Scalar::Util 1.25; 1;';
 
-# IMPORTANT: Distros MUST NOT create dependencies on Net::DNS::SEC	(Prohibited in many territories)
+# IMPORTANT: Distros MUST NOT create dependencies on Net::DNS::SEC	(strong crypto prohibited in many territories)
 use constant EXISTS => join '', qw(r e q u i r e);		# Defeat static analysers and grep
 use constant DNSSEC => defined( eval join ' ', EXISTS, 'Net::DNS::SEC::Private' );
-use constant ACTIVE => DNSSEC && $INC{'Net/DNS/SEC.pm'};	# Discover how we got here
+use constant ACTIVE => DNSSEC && $INC{'Net/DNS/SEC.pm'};	# Discover how we got here, without loading libcrypto
 
 my ($RSA) = grep ACTIVE && defined( eval join ' ', EXISTS, $_ ), 'Net::DNS::SEC::RSA';
 my ($DSA) = grep ACTIVE && defined( eval join ' ', EXISTS, $_ ), 'Net::DNS::SEC::DSA';
@@ -301,8 +301,6 @@ sub create {
 		$self->{sigexpiration} = $self->{siginception} + $self->{sigval}
 				unless $self->{sigexpiration};
 
-		croak 'No "use Net::DNS::SEC" declaration in application code' unless ACTIVE;
-
 		$self->_CreateSig( $self->_CreateSigData($rrsetref), $private );
 		return $self;
 	}
@@ -377,8 +375,6 @@ sub verify {
 			$self->{vrfyerrstr} = 'keytag does not match';
 			return 0;
 		}
-
-		croak 'No "use Net::DNS::SEC" declaration in application code' unless ACTIVE;
 
 		$self->_VerifySig( $self->_CreateSigData($rrsetref), $keyref ) || return 0;
 
@@ -558,8 +554,9 @@ sub _CreateSig {
 		my $class     = $DNSSEC_sign{$algorithm};
 
 		eval {
-			die "algorithm $algorithm not supported" unless $class;
-			$self->sigbin( $class->sign(@_) );
+			return $self->sigbin( $class->sign(@_) ) if $class;
+			die qq[algorithm $algorithm not supported\n] if ACTIVE;
+			die qq[No "use Net::DNS::SEC" declaration in application code\n];
 		} || croak "${@}signature generation failed";
 	}
 }
@@ -573,8 +570,9 @@ sub _VerifySig {
 		my $class     = $DNSSEC_verify{$algorithm};
 
 		my $retval = eval {
-			die "algorithm $algorithm not supported" unless $class;
-			$class->verify( @_, $self->sigbin );
+			return $class->verify( @_, $self->sigbin ) if $class;
+			die qq[algorithm $algorithm not supported\n] if ACTIVE;
+			die qq[No "use Net::DNS::SEC" declaration in application code\n];
 		};
 
 		unless ($retval) {
@@ -604,8 +602,8 @@ __END__
 
     use Net::DNS::SEC;
     $sigrr = create Net::DNS::RR::RRSIG( \@rrset, $keypath,
-					sigex => 20181231010101
-					sigin => 20181201010101
+					sigex => 20191231010101
+					sigin => 20191201010101
 					);
 
     $sigrr->verify( \@rrset, $keyrr ) || die $sigrr->vrfyerrstr;
@@ -729,8 +727,8 @@ Create a signature over a RR set.
     $sigrr = create Net::DNS::RR::RRSIG( \@rrsetref, $keypath );
 
     $sigrr = create Net::DNS::RR::RRSIG( \@rrsetref, $keypath,
-					sigex => 20181231010101
-					sigin => 20181201010101
+					sigex => 20191231010101
+					sigin => 20191201010101
 					);
     $sigrr->print;
 
@@ -756,8 +754,8 @@ containing the private key as generated by dnssec-keygen.
 The optional remaining arguments consist of ( name => value ) pairs
 as follows:
 
-	sigex  => 20181231010101,	# signature expiration
-	sigin  => 20181201010101,	# signature inception
+	sigex  => 20191231010101,	# signature expiration
+	sigin  => 20191201010101,	# signature inception
 	sigval => 30,			# validity window (days)
 	ttl    => 3600			# TTL
 
