@@ -7,6 +7,14 @@ $Id$                       -*-text-*-
 
 	TSIG MAC representation changed to Base64 (align with BIND).
 
+	Update Parameters.pm to resync with IANA registry.
+
+	Refactor resolver test scripts.
+
+Fix rt.cpan.org #128081
+
+	Recurse.pm fails to resolve domain “kickboxingireland.ie”
+
 Fix rt.cpan.org #127307
 
 	Provide a more informative exception report if application code
